<resources>
    <string name="app_name">FirebaseAuthApp</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="send_password_reset_email">Reset Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="sign_up">Sign Up</string>

    <string name="item1">Apple</string>
    <string name="item2">Milkshake</string>
    <string name="item3">Energy Drink</string>
    <string name="item4">Proteins</string>
</resources>