<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_below="@id/et_first_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_below="@id/et_last_name"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_height"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:ems="10"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/et_weight"
        style="@style/viewCustom"
        android:layout_below="@id/et_height"
        android:ems="10"
        android:hint="@string/weight" />

    <TextView
        android:id="@+id/textView"
        style="@style/viewCustom"
        android:ems="10"
        android:layout_below="@id/et_weight"
        android:text="Gender"
        android:textSize="20dp"/>

    <RadioGroup
        style="@style/viewCustom"
        android:layout_below="@+id/textView"
        android:id="@+id/et_radioGroup"
        android:orientation="vertical">

        <RadioButton
            style="@style/viewCustom"
            android:text="Male"
            android:id="@+id/radioButton1"
            android:checked="false"/>

        <RadioButton
            style="@style/viewCustom"
            android:text="Female"
            android:id="@+id/radioButton2"
            android:checked="false"/>
    </RadioGroup>


    <Button
        android:id="@+id/btn_register"
        style="@style/viewCustom"
        android:layout_below="@id/et_radioGroup"
        android:layout_marginTop="225dp"
        android:background="@color/black"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    `

</RelativeLayout>