<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/ic_launcher_foreground"
        android:scaleType="centerCrop"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/tv_entercredentials"
        style="@style/viewCustom"
        android:clickable="true"
        android:layout_below="@id/imageView"
        android:gravity="center_horizontal"
        android:text="Enter Your Credentials"
        android:textSize="28sp" />


    <EditText
        android:id="@+id/et_ownerid"
        android:layout_centerVertical="true"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_ownerpassword"
        style="@style/viewCustom"
        android:layout_below="@id/et_ownerid"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_ownerlogin"
        style="@style/viewCustom"
        android:layout_below="@id/et_ownerpassword"
        android:background="@color/black"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />





</RelativeLayout>